--- a/styles/base.css
+++ b/styles/base.css
@@ -1,47 +1,53 @@
+body {
+    font-family: 'Roboto Condensed', 'Roboto', 'Smooch Sans', sans-serif;
+}
+
+
 
 header {
     background-color: blue;
     text-align: center;
 }
 
-ul{
-    
+ul {
+
     text-decoration: underline;
-    color:blueviolet;
+    color: blueviolet;
     justify-content: center;
-    margin-top:150px;
+    margin-top: 150px;
 
 }
 
-nav{ 
-    display:flex;
-    justify-content: space-around ;
+nav {
+    display: flex;
+    justify-content: space-around;
     align-items: center;
     text-align: center;
     background-color: black;
     height: 10vh;
 }
+
 nav a {
     text-decoration: none;
     color: white;
-    text-size-adjust: bold;
+    text-size-adjust: auto;
 }
 
-nav a:hover{
+nav a:hover {
     text-decoration: solid;
 }
 
 
-main{
-    max-width:100000px;
+main {
+    max-width: 100000px;
     width: 100%;
 
     padding: 1rem;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    gap:1rem;
-    
-    
+    gap: 1rem;
+
+
 }
 
 .card {
@@ -49,8 +55,8 @@ main{
     border: 1px solid #ddd;
     border-radius: 15px;
     height: 80vh;
-    
-    
+
+
 }
 
 .content {
@@ -60,62 +66,85 @@ main{
 
 .slide {
     display: flex;
-    
+
 }
 
 
 
- 
 
 
-h2,h4{
+
+h2 {
     background-color: blueviolet;
     text-align: center;
     font-size: 20px;
     font-style: initial;
     margin-top: 0;
-    
-    
+
+
 }
-h3{
+
+.pip {
+    background-color: blueviolet;
+    text-align: center;
+}
+
+.pip h3 {
+    background-color: blueviolet;
+    text-align: center;
+    font-size: 20px;
+    font-style: initial;
+    margin-top: 0;
+
+}
+
+
+
+h3 {
     font-size: 20px;
     margin-left: 150px;
     margin-bottom: 2px;
-    
+
 }
 
 
 
-footer{
+footer {
     background-color: blue;
     text-align: center;
     height: 15vh;
-    
+
 }
 
 
-.beauty{
+.beauty {
     color: aliceblue;
-    font-stretch: wider;
     font-size: x-large;
+    text-align: center;
 }
-hr{
+
+.date {
+    text-align: center;
+}
+
+#lastModified {
+    display: inline;
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+}
+
+hr {
     width: 60%;
     margin-bottom: 40px;
     margin-left: 20px;
 }
- 
 
-figcaption{
+
+figcaption {
     font-style: italic;
 }
-.slide p{
+
+.slide p {
     margin-right: 20px;
 }
-
-
-
-
-
-
-
