--- a/styles/base.css
+++ b/styles/base.css
@@ -1,24 +1,18 @@
+/* General Reset */
 body {
     font-family: 'Roboto Condensed', 'Roboto', 'Smooch Sans', sans-serif;
 }
 
-
-
+/* Header Styles */
 header {
     background-color: blue;
+    color: white;
     text-align: center;
 }
 
-ul {
-
-    text-decoration: underline;
-    color: blueviolet;
-    justify-content: center;
-    margin-top: 150px;
-
-}
-
+/* Navigation Styles */
 nav {
+
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -28,26 +22,31 @@ nav {
 }
 
 nav a {
+    color: white; /* Maintains contrast */
+}
+
+nav a:focus {
     text-decoration: none;
     color: white;
-    text-size-adjust: auto;
 }
 
 nav a:hover {
+    color: #d3d3d3; /* Light gray for better contrast */
     text-decoration: solid;
 }
 
+.hidden-link {
+    display: none; /* Hides the links visually */
+}
 
+/* Main Content Styles */
 main {
     max-width: 100000px;
     width: 100%;
-
     padding: 1rem;
     display: grid;
     grid-template-columns: 2fr 1fr;
     gap: 1rem;
-
-
 }
 
 .card {
@@ -55,8 +54,6 @@ main {
     border: 1px solid #ddd;
     border-radius: 15px;
     height: 80vh;
-
-
 }
 
 .content {
@@ -66,22 +63,24 @@ main {
 
 .slide {
     display: flex;
-
 }
 
+.slide p {
+    margin-right: 20px;
+}
 
+figcaption {
+    font-style: italic;
+}
 
-
-
-
+/* Text & Headings */
 h2 {
     background-color: blueviolet;
     text-align: center;
+    color: white;
     font-size: 20px;
     font-style: initial;
     margin-top: 0;
-
-
 }
 
 .pip {
@@ -90,33 +89,35 @@ h2 {
 }
 
 .pip h2 {
-    background-color: blueviolet;
-    text-align: center;
     font-size: 20px;
     font-style: initial;
     margin-top: 0;
-
 }
 
 .need h2 {
-    background-color: ghostwhite
+    background-color: #d3d3d33c;
+    
+    color:black;
 }
 
+/* Lists */
+ul {
+    text-decoration:underline;
+    color: #4b0082;
+    justify-content: center;
+    margin-top: 150px;
+}
 
-
-
-
-
+/* Footer Styles */
 footer {
     background-color: blue;
     text-align: center;
     height: 15vh;
-
+    color: white; /* Changed from aliceblue to white */
 }
 
-
 .beauty {
-    color: aliceblue;
+    color: white; /* Updated for consistency */
     font-size: x-large;
     text-align: center;
 }
@@ -132,17 +133,9 @@ footer {
     margin: 0 auto;
 }
 
+/* Utility Styles */
 hr {
     width: 60%;
     margin-bottom: 40px;
     margin-left: 20px;
-}
-
-
-figcaption {
-    font-style: italic;
-}
-
-.slide p {
-    margin-right: 20px;
 }
