--- a/styles/place.css
+++ b/styles/place.css
@@ -40,7 +40,7 @@ body {
         position: absolute;
         top: 20px;
         background-color: var(--second-color);
-        box-shadow: 10px;
+        box-shadow: 0cm;
         left: 20px;
         width: 300px;
 
