--- a/styles/place-responsive.css
+++ b/styles/place-responsive.css
@@ -17,6 +17,7 @@
         margin: 10px 0;
     }
 
+
     .weather h2 {
         display: flex;
         flex-direction: column;
@@ -34,5 +35,13 @@
     .icon {
         display: block; /* Ensure the icon is visible */
         margin-top: 10px;
+    }
+
+    .icon img{
+        height: auto;
+        max-width:50px;
+        display: block;
+        margin: 0 auto;
+
     }
 }
